# edication-IPC

./: CMakeLists.txt  README.md  unnamed_pipes.cpp
message_queues/: client_msg.cpp  msg_common.h  server_msg.cpp
named_pipes/: client_fifo.cpp  server_fifo.cpp
shared_memory/: client_shm.cpp  server_shm.cpp
